# rust-uncrashable-module

./: README.md  bindingsexposed.rs  build.rs  setup.sh
src/: .built-in.a.cmd  .load_wrmsr.mod.cmd  Makefile  bindings_helper.h  load_wrmsr.c  load_wrmsr.mod
tests/target-test/: .rustc_info.json
tests/target-test/debug/.fingerprint/chrdev-region-allocation-tests-77964a44923c470e/: test-integration-test-tests  test-integration-test-tests.json
tests/target-test/debug/.fingerprint/kernel-module-testlib-396f0e0d85bf55fd/: lib-kernel-module-testlib  lib-kernel-module-testlib.json
tests/target-test/debug/.fingerprint/kernel-module-testlib-ae85f20030d68dc4/: lib-kernel-module-testlib  lib-kernel-module-testlib.json
tests/target-test/debug/.fingerprint/printk-tests-01434aa8ba10a364/: dep-test-integration-test-tests  test-integration-test-tests  test-integration-test-tests.json
tests/target-test/debug/.fingerprint/sysctl-get-tests-b457b6f593f24261/: test-integration-test-tests  test-integration-test-tests.json
uncrashable_module/: Cargo.toml  Kbuild  Makefile  check_clos.c  check_clos.c~  load_module.sh  msr_reader  msr_reader.cpp  unload_module.sh
uncrashable_module/src/: lib.rs  msr.rs
