[package]
name = "uncrashable_module"
version = "0.1.0"
authors = ["Jacob Earle <jacob.earle@yale.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
linux-kernel-module = { path = ".." }

